wiki-frontend/src/Styles/style.css
/* ... */
h1, h2, h3, h4, h5, h6 {
	color: #000;
	background: none;
	font-weight: normal;
	margin: 0;
	overflow: hidden;
	padding-top: 0.5em;
	padding-bottom: 0.17em;
}
.article h1 {
	/* font-family: 'Linux Libertine','Georgia','Times',serif; */
	border-bottom: 1px solid #a2a9b1;
}
.article h2 {
	font-size: 1.6em;
	margin: 0.5em 0 0.5em 0;
	/* font-family: 'Linux Libertine','Georgia','Times',serif; */
	font-weight: bold;
	border-bottom: 1px solid #a2a9b1;
	line-height: 1.4em;
	padding-bottom: 0em;
}
.article h3 {
	font-weight: bold;
	font-size: 1.2em;
}
.article p.roleNote {
	padding: 1em 0 0 1.6em;
	font-style: italic;
}
p.siteSub {
	font-size: 92%;
}
body {
	background: transparent;
}
ul {
	list-style-type: none;
	list-style-image: none;
	margin: 0;
	padding: 0.3em 0 0 0;
}
h1 {
	line-height: 1.3;
	margin-bottom: 0.25em;
	padding: 0;
	letter-spacing: 0;
	font-size: 2.3em;
}
a, a:visited {
	color: var(--footer-link-color, #0645ad);
	text-decoration: none;
}
a:hover {
	text-decoration: underline;
}
.wrapAll {
	max-width: 1200px;
	width: 90%;
	margin: 0 auto;
}
.sidebar {
	float: left;
	width: 10em;
	padding: 0em 1em 1em 1em;
	position: absolute;
}
.sidebar h3 {
	font-size: 0.75em;
	color: #252525;
	font-weight: bolder;
	padding: 0.25em 0;
	cursor: default;
	border: 0;
	border-bottom: 1px solid #333333;
}
.sidebar a{
	color: #1d305e;
	
}
.sidebar li {
	line-height: 1.125em;
	margin: 0;
	padding: 0.25em 0;
	font-size: 0.75em;
	word-wrap: break-word;
}
.logo {
	margin-bottom: 20px;
}
.logo img{
	max-width: 100%;
}
.navigation {
	margin-top: 1rem;
	padding: 0.15em 0 0 0.45em;
}
.mainsection {
	margin: 0 0 0 11em;
	display: flex;
	flex-direction: column;
	min-height: calc(100vh - 120px);
}
.headerLinks {
	text-align: right;
	padding: 0.8em 1.4em;
	font-size: 0.72em;
	color: #252525;
	letter-spacing: 0.017em;
}
.headerLinks a{
	display: inline-block;
	margin: 0 0 0 0.5em;
}
.tabs {
}
.tabs ul li a {
	display: block;
	background: url(img/blue-gradient.png) bottom left repeat-x transparent;
	font-size: 0.85em;
	padding: 1em 0.5em 0;
	line-height: 2em;
	position: relative;
	top: 1px;
	left: 1px;
	border-bottom: 1px solid #A7D7F9;
}
.tabs ul li a.active {
	background: #FFF;
	border-bottom-color: transparent;
}
.tabs ul {
	display: inline-block;
	background: url(img/tab-separator.png) repeat-x top left transparent;
	letter-spacing: 0;
	margin: 0;
	padding: 0 1px 0 0;
}
.tabs ul li {
	margin: 0;
	padding: 0;
	white-space: nowrap;
	display: inline-block;
	float: left;
	margin: 0 1px 0 0px;
}
.tabs ul {
}
.tabsLeft {
	line-height: 0;
	float: left;
}
#simpleSearch {
	margin: 1em 1em 0em 0.5em;
	display: block;
	width: 267px;
	height: 23px;
	padding: 0 0 0 3px;
	float: right;
	overflow: hidden;
	border: solid 1px #aaa;
	background: #F6F6F6;
	background: -moz-linear-gradient(top, #F6F6F6 0%, #FFFFFF 100%);
	background: -webkit-linear-gradient(top, #F6F6F6 0%, #FFFFFF 100%);
	background: linear-gradient(to bottom, #F6F6F6 0%, #FFFFFF 100%);
}
#searchInput {
	background: transparent;
	border: none;
	vertical-align: top;
	height: 23px;
	width: 239px;
	font-size: 0.8em;
}
#submitSearch {
	background-image: url(img/search.png);
	display: inline-block;
	background-position: center center;
	background-repeat: no-repeat;
	height: 23px;
	width: 23px;
	cursor: pointer;
}
.tabsRight {
	float: right;
	line-height: 0;
}
.article {
	/* padding: 1.25em 1.5em 1.5em 1.5em; */
	margin-top: 1.5rem;
	border-left: 1px solid #f3f3f3;
	border-right: 1px solid #f3f3f3;
	background: #526cad;
	line-height: 1.6;
	font-size: 0.875em;
	border-top: 1px solid #f3f3f3;
	border-bottom: 1px solid #f3f3f3;
	height: fit-content;
	/* width: 98%; */
}
.article p {
	line-height: inherit;
	margin: 0.5em 0;
}
span.user {
	background-position: left top;
	background-repeat: no-repeat;
	background-image: url(img/user-ico.png);
	padding-left: 15px !important;
}
.contentsPanel {
	border: 1px solid #a2a9b1;
	background-color: #f8f9fa;
	padding: 5px;
	font-size: 95%;
	position: relative;
	line-height: 1.7em;
	width: 280px;
}
.contentsHeader {
	font-family: sans-serif;
	font-weight: bold;
	text-align: center;
}
.hidePanel, .showPanel {
	float: right;
	margin: 0 5px;
	position: absolute;
	right: 20px;
	cursor: pointer;
	color: #0645ad;
	top: 4px;
}
.contentsPanel ul li span {
	display: inline-block;
	margin-right: 8px;
}
.contentsPanel ul li {
}
.contentsPanel ul {
	padding: 0 0 5px 5px;
}
.contentsPanel ul li ul{
}
.contentsPanel ul li ul li {
	padding: 0 0 0 25px;
}
.showPanel {
	display: none;
}
.minimizedPanel .showPanel {
	display: block;
}
.minimizedPanel .hidePanel {
	display: none
}
.contentsPanel.minimizedPanel {
	width: 130px;
}
.minimizedPanel .contentsHeader {
	text-align: left;
}
.lavenderBox {
	background: #fdfdfd;
	border: 1px solid #a2a9b1;
	clear: both;
	font-size: 88%;
	text-align: center;
	padding: 3px;
	line-height: 1.7em;
	margin: 1em auto 0;
}
.lavenderBox .header {
	background: #ccccff;
	padding: 0.25em 1em;
	line-height: 1.5em;
	text-align: center;
	font-weight: bold;
	color: #0645ad;
	font-size: 115%;
	margin-bottom: 3px;
}
.lavenderBox .subtitle {
	background: #ddddff;
}
.linklist a:after {
	content: " · ";
	font-weight: bold;
}
.linklist a:last-child:after {
	content: "";
}
.linklist a {
	white-space: nowrap;
}
.categories {
	border: 1px solid #a2a9b1;
	background-color: #f8f9fa;
	padding: 5px;
	margin-top: 1em;
	font-size: 1.1em;
	clear: both;
}
.categories a:after {
	content: " | ";
	font-weight: bold;
}
.categories a:last-child:after {
	content: "";
}
.pagefooter {
	padding: 1.5vh 1vh;
	font-size: 75%;
	line-height: 2em;
}
.pagefooter a {
	display: inline-block;
	margin-right: 1em;
	color: #233a71;
}

.editButton {
	width: 1em;
	height: 1em;
	margin-bottom: 0.2em;
	/* float: right; */
	margin-left: 1em;
}
/* ... */

